# py-template

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  stale.yaml  stale.yml
py/: main.py
src/: main.py
