[project]
name = "python-template"
version = "0.2.2"
authors = [
  { name="Austin Lake", email="austinlake04@gmail.com" },
]
description = "Template repository for Python projects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/austinlucaslake/python-template"

[project.optional-dependencies]
dev = ["black", "autopep8", "flake8", "flake8-docstrings", "autoflake", "pytest", "pipreqs", "pip-tools"]
