[project]
name = "python-template"
version = "0.1.0"
authors = [
  { name="Austin Lucas Lake", email="git@austinlucaslake.com" },
]
description = "Template repository for Python projects."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/austinlucaslake/py-template"

[project.optional-dependencies]
dev = ["ruff", "pylint", "pytest", "pipreqs", "pip-tools", "pre-commit-hooks"]

[tool.ruff]
select = [
  "ALL",
]
